# meson

mesonbuild/: build.py  environment.py  mesonlib.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/compilers/: c.py  compilers.py  cpp.py
test cases/common/140 get define/: meson.build
test cases/linuxlike/13 find shared library/: install.sh  main.c  meson.build
test cases/linuxlike/13 find shared library/findables/: meson.build  shared1.c  shared2.c  static2.c
test cases/linuxlike/7 library versions/: meson.build
test cases/linuxlike/8 subproject library install/: meson.build
